<resources>
    <string name="app_name">Chiguru-mobile-app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Chiguru Ecospace Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Account Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_tour">Tour</string>
    <string name="menu_account">Account Settings</string>
    <string name="menu_support">Report a Problem</string>
    <string name="qr_result">QR Result</string>
    <string name="logintext">Login</string>
    <string name="create_account">Create Account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="enter">Enter</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="eventimage">Event Image</string>
    <string name="eventheading">Heading</string>
    <string name="eventdesc">Description</string>
    <string name="eventdatelabel">"Date: "</string>
    <string name="eventdate">11/1/19</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="shopimage">Shop Image</string>
    <string name="shopheading">Heading</string>
    <string name="shopdesc">Description</string>
    <string name="shopitempricelabel">Price:</string>
    <string name="Price">0</string>
    <string name="accountdetails">Account Details</string>
    <string name="changeusername">Change Username</string>
    <string name="changepassword">Change Password</string>
    <string name="accountdetailsnamelabel">Name:</string>
    <string name="accountdetailserror">Failed to retrieve</string>
    <string name="accountdetailsemail">Email:</string>
    <string name="accountdetailsUIDlabel">User UID:</string>
    <string name="currentusernametext">Current Username:</string>
    <string name="newusername">New Username:</string>
    <string name="usernamechangehint">Type your new username ...</string>
    <string name="currentpasswordtext">Current Password:</string>
    <string name="newpassword">New Password:</string>
    <string name="passwordchangehintold">Type your current Password ...</string>
    <string name="passwordchangehint">Type your new Password ...</string>
    <string name="retypepassword">Retype New Password</string>
    <string name="resetpasswordemaillabel">Enter your email and we will send you a link to reset your password</string>
    <string name="type_your_message_here">Type your message here ...</string>
    <string name="title">Title</string>
    <string name="user_location_permission_explanation">Permission is required to run the map</string>
    <string name="user_location_permission_not_granted">Map Permission Denied</string>
    <string name="startnavigation">Start Navigation</string>
    <string name="mapbase">mapbox://styles/ruthuparnak/cka3qxi8n0o231inxiirhcars</string>
    <string name="maprouteA">mapbox://styles/ruthuparnak/cka43ge730dsv1imnl55szjut</string>
    <string name="changeroute">Change Route:</string>
</resources>
