<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contactus" />
    </group>

    <item android:title="Farm">
        <menu>
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_shop" />
    <item
        android:id="@+id/nav_tour"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_tour" />
        </menu>
    </item>

    <item android:title="Settings and Support">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_support" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
