<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.aboutus.AboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.contactus.ContactusFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_tour"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.tour.TourFragment"
        android:label="@string/menu_tour"
        tools:layout="@layout/fragment_tour" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.chiguruecospace.chiguru_mobile_app.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_support" />
</navigation>