<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.EventActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fulleventimage"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:layout_marginEnd="-8dp"
                android:contentDescription="@string/eventimage"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/fulleventheadingtext"
                android:layout_width="352dp"
                android:layout_height="36dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/eventheading"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal"
                android:paddingLeft="30dp">

                <TextView
                    android:id="@+id/fulleventdatelabel"
                    android:layout_width="34dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/eventdatelabel"
                    android:textAlignment="gravity" />

                <TextView
                    android:id="@+id/fulleventdate"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/eventdate" />

            </LinearLayout>

            <TextView
                android:id="@+id/fulleventdesctext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/eventdesc" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>