<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/supportcontraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/supportimage"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:contentDescription="@string/eventimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/supportheadingtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/duru_sans"
        android:text="@string/eventheading"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportimage" />

    <TextView
        android:id="@+id/supportdesctext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/eventdesc"
        android:textAlignment="center"
        android:textColor="#bcdc89"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportheadingtext" />

    <EditText
        android:id="@+id/supportform"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#BCDC89"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/type_your_message_here"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportformtitle"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/supportsubmitbutton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportform" />

    <EditText
        android:id="@+id/supportformtitle"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="#BCDC89"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportdesctext" />

</androidx.constraintlayout.widget.ConstraintLayout>
